--- a/src/index.pug
+++ b/src/index.pug
@@ -41,9 +41,9 @@ html(lang="en")
                     .hero-image__layout
                             .woman-image
                     .container    
-                        .top-panel
-                            .logo
-                                img.logo-img__left(src="images/logo.png", alt="")
+                        //- .top-panel
+                        //-     .logo
+                        //-         img.logo-img__left(src="images/logo.png", alt="")
                         .hero-title
                                 h1
                                     |Real 
@@ -243,87 +243,123 @@ html(lang="en")
                                     .slide__title
                                         h4 Pigmentation spots
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_1.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_2.jpg", alt="")
+                                        .content-item__image                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_3.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 WOW. Serum + Mezoroller
                                 div
                                     .slide__title
                                         h4 Eye Area
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p 2 Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_4.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p 2 After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_5.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p 2 WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_6.jpg", alt="")
+                                        .content-item__text                                        
+                                            p 2 WOW. Serum + Mezoroller
                                 div
                                     .slide__title
                                         h4 Neck & Decollete
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p 2 Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_7.jpg", alt="")
+                                        .content-item__text
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p 2 After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_8.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p 2 WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_9.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 WOW. Serum + Mezoroller
                                 div
                                     .slide__title
                                         h4 Enlarged Pores
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p 2 Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_10.jpg", alt="")
+                                        .content-item__text
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p 2 After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_11.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p 2 WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_12.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 WOW. Serum + Mezoroller 
                                 div
                                     .slide__title
                                         h4 Acne Scars
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p 2 Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_13.jpg", alt="")
+                                        .content-item__text
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p 2 After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_14.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p 2 WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_15.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 WOW. Serum + Mezoroller
                                 div
                                     .slide__title
                                         h4 Nasolabial folds
                                     div.item
-                                        img(src="images/slide_img_1.jpg", alt="")
-                                        p 2 Before using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_16.jpg", alt="")
+                                        .content-item__text
+                                            p 2 Before using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_2.jpg", alt="")
-                                        p 2 After 1 week using Mezoluxe
+                                        .content-item__image
+                                            img(src="images/slide_img_17.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 After 1 week using Mezoluxe
                                     div.item
-                                        img(src="images/slide_img_3.jpg", alt="")
-                                        p 2 WOW. Serum + Mezoroller
+                                        .content-item__image
+                                            img(src="images/slide_img_18.jpg", alt="")
+                                        .content-item__text                                            
+                                            p 2 WOW. Serum + Mezoroller 
                             .slideshow-nav
                                 div.block__left(uk-slideshow-item="0")
-                                    img(src="images/slideshow-item-0.jpg", alt="")
+                                    img(src="images/slide_img_1.jpg", alt="")
                                 div.block__left(uk-slideshow-item="1")
-                                    img(src="images/slideshow-item-1.jpg", alt="")
+                                    img(src="images/slide_img_4.jpg", alt="")
                                 div.block__left(uk-slideshow-item="2")
-                                    img(src="images/slideshow-item-1.jpg", alt="")
+                                    img(src="images/slide_img_7.jpg", alt="")
                                 div.block__left(uk-slideshow-item="3")
-                                    img(src="images/slideshow-item-1.jpg", alt="")
+                                    img(src="images/slide_img_10.jpg", alt="")
                                 div.block__left(uk-slideshow-item="4")
-                                    img(src="images/slideshow-item-1.jpg", alt="")
+                                    img(src="images/slide_img_13.jpg", alt="")
                                 div.block__left(uk-slideshow-item="5")
-                                    img(src="images/slideshow-item-1.jpg", alt="")
+                                    img(src="images/slide_img_16.jpg", alt="")
             section.go_ahead(uk-scrollspy="cls: uk-animation-fade; target: .scroll-spy; delay: 150; repeat: false")
                 .container
                     .title__primary-title.scroll-spy
@@ -390,22 +426,23 @@ html(lang="en")
                                         .text.uk-transition-fade
                                             p With regular use, Mezoluxe helps shrink pores and make skin smoother and more resilient.
                                     .info-image__left.uk-transition-slide-bottom(uk-slider-parallax="x: 200,-200")
-                                        img(src="images/image_after_wrinkles.jpg", alt="")
+                                        img(src="images/image_after_pores.jpg", alt="")
                                 div 
                                     .info-block__left
                                         .title.uk-transition-slide-top(uk-slider-parallax="x: 100,-100")
                                             h2 Acne Scars
                                         .text.uk-transition-fade
-                                            p Red marks and pimple scars fade after the third use. Red marks and pimple scars fade after the third use. Red marks and pimple scars fade after the third use. Red marks and pimple scars fade after the third use.
+                                            p Red marks and pimple scars fade after the third use. 
                                     .info-image__left.uk-transition-slide-bottom(uk-slider-parallax="x: 200,-200")
-                                        img(src="images/image_after_wrinkles.jpg", alt="")
+                                        img(src="images/image_after_acne.jpg", alt="")
                             .slider-nav
                                 .image-navigation.__1(uk-slider-item="0")
                                 .image-navigation.__2(uk-slider-item="1")
                                 .image-navigation.__3(uk-slider-item="2")
-                                .image-navigation.__3(uk-slider-item="3")
+                                .image-navigation.__4(uk-slider-item="3")
                             .slider-text-nav
                                 div
+                                    a(href="#" uk-slidenav-previous uk-slider-item="previous")
                                     .text-navigation(uk-slider-item="0")
                                         span Pigmentation
                                     .text-navigation(uk-slider-item="1")
@@ -414,6 +451,7 @@ html(lang="en")
                                         span Enlarged pores
                                     .text-navigation(uk-slider-item="3")
                                         span Acne Scars
+                                    a(href="#" uk-slidenav-next uk-slider-item="next")
             section.statistics(uk-scrollspy="cls: uk-animation-fade; target: .scroll-spy; delay: 150; repeat: false")
                 .container
                     div.scroll-spy
