--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -991,7 +991,7 @@ div,section{
 section.effect{
     margin-top: $margin-top-large;
     clear: both;
-    @media screen and (max-width: 640px) {
+    @media screen and (max-width: 860px) {
         margin: 0 15px;
     }
     .title__primary-title{
@@ -1007,7 +1007,7 @@ section.effect{
     .__card{
         padding-top: 30px;
         padding-bottom: 30px;
-        @media screen and (max-width: 640px){
+        @media screen and (max-width: 860px){
             padding-left: 15px;
             padding-right: 15px;
         }        
@@ -1015,7 +1015,7 @@ section.effect{
     .product-image__left{
         width: 33.333%;
         overflow: hidden;
-        @media screen and (max-width: 640px){
+        @media screen and (max-width: 860px){
             width: 100%;
         }
         .product-image__title{
@@ -1023,7 +1023,7 @@ section.effect{
             font-weight: 700;
             line-height: 44px;
             color: $dark-blue;
-            @media screen and (max-width: 640px){
+            @media screen and (max-width: 860px){
                 font-size: 28px;
                 line-height: 32px;
                 text-align: center;
@@ -1031,12 +1031,16 @@ section.effect{
         }
         .product-image__img{
             margin-top: $margin-top-medium;
-            @media screen and (max-width: 640px){
+            @media screen and (max-width: 860px){
                 margin-top: 10px;
+                text-align: center;
             }
             img{
                 width: 340px;
                 margin-left: -32px;
+                @media screen and (max-width: 380px){
+                    margin-left: -55px;
+                }
             }
         }
         
@@ -1045,15 +1049,20 @@ section.effect{
         width: 66.666%;
         padding: 0 $padding-medium;
         padding-right: 0;
-        @media screen and (max-width: 640px){
+        @media screen and (max-width: 860px){
             width: 100%;
             padding: 0;
         }        
         .uk-slideshow-items{
             position: relative;
             min-height: 400px !important;
+            @media screen and (max-width: 860px){
+                min-height: 375px !important;
+                max-width: 640px;
+                margin: 0 auto;
+            }
             @media screen and (max-width: 640px){
-                min-height: 170px !important;
+                min-height: 275px !important;
             }
             > div {
                 .slide__title{
@@ -1063,72 +1072,91 @@ section.effect{
                         font-weight: 700;
                         line-height: 38px;
                         text-align: right;
+                        @media screen and (max-width: 860px) {
+                            text-align: center;
+                        }
                     }
                 }
                 .item {
-                width: 33.333%;
-                overflow: hidden;
-                float: left;
-                height: 367px ;
-                padding: 20px 20px 20px 0;
-                @media screen and (max-width: 640px){
-                    height: 160px;
-                    padding-right: 10px;
-                }
-                    &:last-child{
-                        padding-right: 0;
+                    width: 30%;
+                    float: left;
+                    // height: 270px;
+                    padding: 20px 20px 20px 0;
+                    margin-right: 3.333%;
+                    @media screen and (max-width: 860px){
+                        max-height: 260px;
+                        // padding-right: 10px;
                     }
-                    img{
-                        width: 100%;
-                        height: auto;
-                        max-height: 267px ;
+                    @media screen and (max-width: 640px){
+                        width: 32%;
+                        max-height: 260px;
+                        margin-right: 1.333%;                        
+                    }
+                    .content-item__image{
+                        height: 270px ;
+                        overflow: hidden;
+                        @media screen and (max-width: 860px) {
+                            max-height: 225px;
+                        }                        
+                        @media screen and (max-width: 640px) {
+                            max-height: 185px;
+                        }
+                        @media screen and (max-width: 380px) {
+                            max-height: 160px;
+                        }
+                        img{
+                            width: auto;
+                            height: 100%;
+                        }
+                    }
+                    .content-item__text{
+                        @media screen and (max-width: 640px) {
+                            font-size: 12px;
+                        }
                     }
                 }
             }
         }
         .slideshow-nav{
+            @media screen and (max-width: 860px) {
+                text-align: center;
+            }
             > div{
                 width: 70px;
                 height: 70px;
                 border-radius: 100%;
                 overflow: hidden;
                 margin: 21px 15px;
-                @media screen and (max-width: 640px){
+                @media screen and (max-width: 1024px){
+                    width: 60px;
+                    height: 60px;                    
+                    margin: 21px 10px;
+                }
+                @media screen and (max-width: 920px){
+                    width: 45px;
+                    height: 45px;                    
+                    margin: 21px 10px;
+                }
+                @media screen and (max-width: 860px){
+                    float: none;
+                    display: inline-block;                    
+                }
+                @media screen and (max-width: 480px){
+                    float: none;
+                    display: inline-block;
                     width: 30px;
                     height: 30px;
                     margin: 21px 5px;
                 }
-                &:last-child{
-                }
                 &.uk-active{
-                    width: 70px;
-                    height: 70px;
-                    border: 4px solid $light-pink;
-                    padding: 2px;
-                    margin: 15px 9px;
                     box-shadow: $card-shadow;
-                    @media screen and (max-width: 640px){
-                        width: 30px;
-                        height: 30px;
-                        margin: 21px 5px;
-                        padding: 0;
-                    }
-                    img{
-                        @media screen and (max-width: 640px){
-                            width: 22px;
-                            height: 22px;
-                        }
+                    transform: scale(1.1);
+                    border: 2px solid $light-pink;
                     }
                 }
                 img{
-                    // width: 100%;
-                    width: 67px;
-                    border-radius: 100%;
-                    @media screen and (max-width: 640px){
-                        width: 30px;
-                    }                    
-                }
-            }
+                    width: 100%;
+                }                    
         }
 
     }
@@ -1276,7 +1304,7 @@ section.the_result{
     }
     .container{
         padding: 0;
-        @media screen and (max-width: 640px) {
+        @media screen and (max-width: 840px) {
             padding: 0 15px;
         }
     }
@@ -1300,7 +1328,9 @@ section.the_result{
         padding-bottom: 30px;
         margin-top: 44px;
         position: relative;
-        // min-height: 755px;
+        @media screen and (max-width: 480px) {
+            padding: 30px;
+        }
         .uk-slider-container{
             outline: none;
         }
@@ -1316,10 +1346,13 @@ section.the_result{
         background-size: contain;
         background-repeat: no-repeat;
         @media screen and (max-width: 840px) {
+            display: none;
             max-width: 100%;
-            max-height: 380px;
+            max-height: 480px;
             top: auto;
-            bottom: 270px;            
+            bottom: 150px; 
+            right: 0;   
+            background-position: center right;
         }
     }
     .uk-slider{
@@ -1327,11 +1360,14 @@ section.the_result{
         max-width: 50%;
         @media screen and (max-width: 840px) {
             max-width: 100%;
+            width: auto;
         }
     }
     .uk-slider-items{
         > div{
+            position: relative;
             width: 100%;
+            min-height: 320px;
         }
         .info-block__left{
             position: relative;
@@ -1340,6 +1376,13 @@ section.the_result{
             @media screen and (max-width: 840px) {
                padding-top: 0;
                 float: none;
+                width: 50%;
+            }
+            @media screen and (max-width:640px) {
+                width: 100%;
+                text-align: center;
+                position: relative;
+                margin-bottom: 30px;    
             }
             .title{
                 color: $light-pink;
@@ -1365,21 +1408,31 @@ section.the_result{
         }
         .info-image__left{
             clear: both;
-            width: 420px;
+            max-width: 420px;
+            width: 100%;
             height: 285px;
             margin-top: 30px;
             margin-bottom: 90px;
             overflow: hidden;
             @media screen and (max-width:840px) {
+                position: absolute;
+                right: 0;
+                top: 0;
+                height: 220px;
+                margin: 0;
+                z-index: -1;
+                text-align: right;
+            }
+            @media screen and (max-width:640px) {
                 width: 100%;
                 height: 220px;
                 text-align: center;
-                margin-top: 250px;
-                margin-bottom: 0;                
+                position: relative;
+                margin-bottom: 50px;                
             }
             img{
-                width: auto;
-                height: 100%;
+                width: 100%;
+                height: auto;
                 border: 5px solid $white;
             }
         }
@@ -1411,7 +1464,15 @@ section.the_result{
             &.__2{
                 right: 20px;
                 top: 175px;
-            }                
+            }   
+            &.__3{
+                right: 150px;
+                top: 242px;
+            }
+            &.__4{
+                right: 70px;
+                top: 232px;                
+            }
         }
     }
     .slider-text-nav{
@@ -1420,18 +1481,39 @@ section.the_result{
         left: 0;
         padding: 0 60px 45px;
         width: 100%;
+        z-index: 9;
         @media screen and (max-width: 840px){
-            overflow-x: scroll;
+            overflow: hidden;
+            width: 100%;
             padding-bottom: 25px;
+        }
+        .uk-slidenav-previous{
+            position: absolute;
+            left: 10px;
+            top: 0;
+        }
+        .uk-slidenav-next{
+            position: absolute;
+            right: 10px;
+            top: 0;            
         }
         > div{
             @media screen and (max-width:840px) {
-                width: 1000px;
+                width: auto;
+                margin: 0 auto;
             }
             > div {
                 float: left;
                 margin-right: 80px;
                 cursor: pointer;
+                @media screen and (max-width:840px) {
+                    float: none;
+                    margin: 0 auto;
+                    text-align: center;
+                    &:not(.uk-active){
+                        display: none;
+                    }
+                }
                 &:last-child{
                     margin-right: 0;
                 }
@@ -1444,6 +1526,9 @@ section.the_result{
                     font-size: 24px;
                     font-weight: 900;
                     color: $dark-black;
+                    @media screen and (max-width: 320px ){
+                        font-size: 16px;
+                    }
                 }
             }
         }
@@ -1454,7 +1539,7 @@ section.the_result{
 section.statistics{
     margin-top: $margin-top-medium;
     overflow: hidden;
-    @media screen and (max-width: 640px) {
+    @media screen and (max-width: 860px) {
         margin-top: 60px;
     }
     > div{
@@ -1463,7 +1548,7 @@ section.statistics{
             position: relative;
             float: left;
             padding-right: 30px;
-            @media screen and (max-width:640px) {
+            @media screen and (max-width:800px) {
                 width: 100%;
                 margin: 0 auto;
                 max-width: 320px;
@@ -1479,7 +1564,7 @@ section.statistics{
         font-weight: 900;
         color: $light-blue;
         z-index: -1;
-        @media screen and (max-width:640px) {
+        @media screen and (max-width:800px) {
             top: -60px;
         }        
     }
@@ -1720,6 +1805,9 @@ section.its_easy{
 section.order{
     position: relative;
     margin-top: $margin-top-large;
+    @media screen and (max-width: 1100px) {
+        margin-top: 60px;
+    }
     .order-image__layout{
         position: absolute;
         right: 0;
