--- a/src/index.pug
+++ b/src/index.pug
@@ -682,15 +682,15 @@ html(lang="en")
                                 |step
                             .text
                                 p Receive delivery and start your skin's transformation
-                    .steps-images.desktop
-                        .__1.scroll-spy
-                            img(src="images/order-step-img-1.jpg", alt="")
-                        .__2.scroll-spy
-                            img(src="images/order-step-img-2.jpg", alt="")   
-                        .__3.scroll-spy
-                            img(src="images/order-step-img-3.jpg", alt="")
-                        .__4.scroll-spy
-                            img(src="images/order-step-img-4.jpg", alt="")
+                    //- .steps-images.desktop
+                    //-     .__1.scroll-spy
+                    //-         img(src="images/order-step-img-1.jpg", alt="")
+                    //-     .__2.scroll-spy
+                    //-         img(src="images/order-step-img-2.jpg", alt="")   
+                    //-     .__3.scroll-spy
+                    //-         img(src="images/order-step-img-3.jpg", alt="")
+                    //-     .__4.scroll-spy
+                    //-         img(src="images/order-step-img-4.jpg", alt="")
             .container
                 section.order(uk-scrollspy="cls: uk-animation-fade; target: .scroll-spy; delay: 150; repeat: false")
                     .order-image__layout
